<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/common_margin">

    <TextView
        android:id="@+id/tv_empty"
        style="@android:style/TextAppearance.Large"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/empty_show_repos_message"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />
</RelativeLayout>
